--- a/app.less
+++ b/app.less
@@ -4,7 +4,7 @@
 @fa-font-path: "bower_components/font-awesome/fonts";
 
 /* Component LESS */
-@import "home/home.less";
+/* @import "home/home.less"; */
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
