--- a/app.less
+++ b/app.less
@@ -4,7 +4,8 @@
 @fa-font-path: "bower_components/font-awesome/fonts";
 
 /* Component LESS */
-/* @import "home/home.less"; */
+@import "avBooth/booth-directive/booth-directive.less";
+@import "avBooth/busy-directive/busy-directive.less";
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
