--- a/app.less
+++ b/app.less
@@ -1,6 +1,8 @@
 @import "bower_components/bootstrap/less/bootstrap.less";
 //@import "bower_components/bootstrap/less/theme.less";
 @import "bower_components/font-awesome/less/font-awesome.less";
+@import "vendor/jquery.nanoscroller/nanoscroller.css";
+
 @fa-font-path: "bower_components/font-awesome/fonts";
 
 /* Component LESS */
