--- a/app.less
+++ b/app.less
@@ -8,8 +8,13 @@
 /* Component LESS */
 @import "avBooth/booth-directive/booth-directive.less";
 @import "avBooth/busy-directive/busy-directive.less";
+@import "avBooth/start-screen-directive/start-screen-directive.less";
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
 .nav, .pagination, .carousel a { cursor: pointer; }
 
+.btn-plain {
+  border-radius: 0;
+  border: 0;
+}
