--- a/avBooth/start-screen-directive/start-screen-directive.less
+++ b/avBooth/start-screen-directive/start-screen-directive.less
@@ -1,6 +1,18 @@
 av-booth {
+  .navbar-fixed-top {
+    border: none;
+    background-color: @av-primary;
+    color: @btn-primary-color;
+  }
+
   .avb-content {
-    margin-top: 40px;
+    padding-top: 15px;
+  }
+
+  .start-screen {
+    h3 {
+      margin-top: 0;
+    }
   }
 
   .affix-bottom {
