collapsing directive seems working now

--- a/app.less
+++ b/app.less
@@ -24,6 +24,12 @@
   border: 0;
 }
 
+.item-block {
+  display: block;
+  width: 100%;
+  border: 0;
+}
+
 .text-brand-success {
   color: @brand-success;
 }
