smaller unfixed top navbar h1

--- a/avBooth/start-screen-directive/start-screen-directive.less
+++ b/avBooth/start-screen-directive/start-screen-directive.less
@@ -26,6 +26,10 @@ av-booth {
     &.collapsed {
       max-height: 150px;
     }
+
+    h1 {
+      margin-top: 0;
+    }
   }
 
   .wrapper-unfixed:after {
