--- a/avBooth/start-screen-directive/start-screen-directive.less
+++ b/avBooth/start-screen-directive/start-screen-directive.less
@@ -46,6 +46,7 @@ av-booth {
     z-index: 101;
     margin-top: -50px;
     width: 100%;
+    margin-bottom: 30px;
   }
 
   #avb-toggle span {
@@ -59,6 +60,7 @@ av-booth {
   }
 
   .avb-content {
+    margin-top: -30px;
     padding-top: 15px;
   }
 
