adding detailed options directive and changing how selection works in there

--- a/avBooth/available-options-directive/available-options-directive.less
+++ b/avBooth/available-options-directive/available-options-directive.less
@@ -1,9 +1,7 @@
 avb-available-options {
-  .col-xs-12 {
-    padding-left: 0;
-  }
-  ul {
-    padding-left: 0;
+  > .col-xs-12 {
+    padding: 0;
+    margin-bottom: 15px;
   }
 
   .animate-repeat {
