--- a/avBooth/booth-directive/booth-directive.less
+++ b/avBooth/booth-directive/booth-directive.less
@@ -1,4 +1,28 @@
 av-booth {
+  .avb-content > .container {
+    padding: 0;
+
+    > .row {
+      margin: 0;
+
+      > .col-xs-12, > .col-sm-6 {
+        padding: 0;
+      }
+    }
+  }
+
+  .padded {
+    padding: 0 15px !important;
+  }
+
+  .padded-left {
+    padding-left: 15px !important;
+  }
+
+  .padded-right {
+    padding-right: 15px !important;
+  }
+
   .navbar-fixed-top {
     border: none;
     background-color: @av-primary;
