--- a/app.less
+++ b/app.less
@@ -13,6 +13,7 @@
 @import "avBooth/available-options-directive/available-options-directive.less";
 @import "avBooth/booth-directive/booth-directive.less";
 @import "avBooth/busy-directive/busy-directive.less";
+@import "avBooth/detailed-option-directive/detailed-option-directive.less";
 @import "avBooth/error-screen-directive/error-screen-directive.less";
 @import "avBooth/help-screen-directive/help-screen-directive.less";
 @import "avBooth/multi-question-directive/multi-question-directive.less";
