add selected options directive implementation

--- a/app.less
+++ b/app.less
@@ -14,6 +14,7 @@
 @import "avBooth/booth-directive/booth-directive.less";
 @import "avBooth/busy-directive/busy-directive.less";
 @import "avBooth/detailed-option-directive/detailed-option-directive.less";
+@import "avBooth/detailed-selected-option-directive/detailed-selected-option-directive.less";
 @import "avBooth/error-screen-directive/error-screen-directive.less";
 @import "avBooth/help-screen-directive/help-screen-directive.less";
 @import "avBooth/multi-question-directive/multi-question-directive.less";
@@ -38,6 +39,18 @@
 
 .text-brand-success {
   color: @brand-success;
+}
+
+.text-brand-warning {
+  color: @brand-warning;
+}
+
+.text-brand-danger {
+  color: @brand-danger;
+}
+
+.text-brand-primary {
+  color: @brand-primary;
 }
 
 /* End Global LESS */
