launch help and highlight when a question needs answer to go next

--- a/avBooth/booth-directive/booth-directive.less
+++ b/avBooth/booth-directive/booth-directive.less
@@ -34,7 +34,7 @@ av-booth {
   .avb-top-navbar {
     margin-top: -3px;
 
-    .glyphicon.glyphicon-question-sign {
+    .glyphicon {
       cursor: pointer;
     }
   }
