--- a/app.less
+++ b/app.less
@@ -17,6 +17,8 @@
 @import "avBooth/detailed-selected-option-directive/detailed-selected-option-directive.less";
 @import "avBooth/error-screen-directive/error-screen-directive.less";
 @import "avBooth/help-screen-directive/help-screen-directive.less";
+@import "avBooth/review-screen-directive/review-screen-directive.less";
+@import "avBooth/review-ballot-directive/review-ballot-directive.less";
 @import "avBooth/multi-question-directive/multi-question-directive.less";
 @import "avBooth/selected-options-directive/selected-options-directive.less";
 @import "avBooth/start-screen-directive/start-screen-directive.less";
