improving review screen look

--- a/avBooth/review-ballot-directive/review-ballot-directive.less
+++ b/avBooth/review-ballot-directive/review-ballot-directive.less
@@ -3,6 +3,16 @@ avb-review-ballot {
     cursor: pointer;
     padding-bottom: 10px;
 
+    h3 {
+      margin-top: 0;
+      padding-top: 20px;
+    }
+
+    ul, ol {
+      margin-bottom: 0;
+      padding-bottom: 10px;
+    }
+
     &:hover {
       background-color: @gray-lighter;
     }
