starting work on casting ballot screen

--- a/app.less
+++ b/app.less
@@ -13,6 +13,7 @@
 @import "avBooth/available-options-directive/available-options-directive.less";
 @import "avBooth/booth-directive/booth-directive.less";
 @import "avBooth/busy-directive/busy-directive.less";
+@import "avBooth/casting-ballot-screen-directive/casting-ballot-screen-directive.less";
 @import "avBooth/detailed-option-directive/detailed-option-directive.less";
 @import "avBooth/detailed-selected-option-directive/detailed-selected-option-directive.less";
 @import "avBooth/error-screen-directive/error-screen-directive.less";
