--- a/avBooth/casting-ballot-screen-directive/casting-ballot-screen-directive.less
+++ b/avBooth/casting-ballot-screen-directive/casting-ballot-screen-directive.less
@@ -1,4 +1,13 @@
-avb-busy {
+avb-casting-ballot-screen {
+  .avb-busy-percent {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    z-index: -1;
+    background-color: @gray-lighter;
+  }
+
   .avb-busy-title {
     width: 100%;
     min-height: 45px;
