adding success screen

--- a/app.less
+++ b/app.less
@@ -23,6 +23,7 @@
 @import "avBooth/multi-question-directive/multi-question-directive.less";
 @import "avBooth/selected-options-directive/selected-options-directive.less";
 @import "avBooth/start-screen-directive/start-screen-directive.less";
+@import "avBooth/success-screen-directive/success-screen-directive.less";
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
