starting to work in the accordion question view mode, starting with avb-accordion-option directive based on simple-option

--- a/app.less
+++ b/app.less
@@ -10,6 +10,8 @@
 /* End Global Config */
 
 /* Component LESS */
+@import "avBooth/accordion-option-directive/accordion-option-directive.less";
+@import "avBooth/accordion-selected-option-directive/accordion-selected-option-directive.less";
 @import "avBooth/available-options-directive/available-options-directive.less";
 @import "avBooth/booth-directive/booth-directive.less";
 @import "avBooth/busy-directive/busy-directive.less";
