working implementation of accordion-selected-option directive

--- a/avBooth/multi-question-directive/multi-question-directive.less
+++ b/avBooth/multi-question-directive/multi-question-directive.less
@@ -19,7 +19,7 @@ avb-multi-question {
   .affixedSelection {
     background-color: @brand-success;
     color: white !important;
-    h4 {
+    > h4 {
       display: none;
     }
   }
