--- a/app.less
+++ b/app.less
@@ -11,6 +11,7 @@
 
 /* Component LESS */
 @import "avBooth/accordion-option-directive/accordion-option-directive.less";
+@import "avBooth/accordion-options-directive/accordion-options-directive.less";
 @import "avBooth/accordion-selected-option-directive/accordion-selected-option-directive.less";
 @import "avBooth/available-options-directive/available-options-directive.less";
 @import "avBooth/booth-directive/booth-directive.less";
