--- a/app.less
+++ b/app.less
@@ -17,10 +17,13 @@
 @import "avBooth/booth-directive/booth-directive.less";
 @import "avBooth/busy-directive/busy-directive.less";
 @import "avBooth/casting-ballot-screen-directive/casting-ballot-screen-directive.less";
+@import "avBooth/draft-options-directive/draft-options-directive.less";
 @import "avBooth/simple-option-directive/simple-option-directive.less";
 @import "avBooth/simple-selected-option-directive/simple-selected-option-directive.less";
+@import "avBooth/draft-selected-option-directive/draft-selected-option-directive.less";
 @import "avBooth/error-screen-directive/error-screen-directive.less";
 @import "avBooth/help-screen-directive/help-screen-directive.less";
+@import "avBooth/drafts-election-screen-directive/drafts-election-screen-directive.less";
 @import "avBooth/review-screen-directive/review-screen-directive.less";
 @import "avBooth/review-ballot-directive/review-ballot-directive.less";
 @import "avBooth/multi-question-directive/multi-question-directive.less";
