--- a/app.less
+++ b/app.less
@@ -20,6 +20,7 @@
 @import "avBooth/draft-options-directive/draft-options-directive.less";
 @import "avBooth/simple-option-directive/simple-option-directive.less";
 @import "avBooth/simple-selected-option-directive/simple-selected-option-directive.less";
+@import "avBooth/draft-option-directive/draft-option-directive.less";
 @import "avBooth/draft-selected-option-directive/draft-selected-option-directive.less";
 @import "avBooth/error-screen-directive/error-screen-directive.less";
 @import "avBooth/help-screen-directive/help-screen-directive.less";
