--- a/avBooth/draft-option-directive/draft-option-directive.less
+++ b/avBooth/draft-option-directive/draft-option-directive.less
@@ -69,7 +69,7 @@ avb-draft-option {
       width: 100%;
       color: black;
       transition: all .4s ease;
-      padding: 10px 23px;
+      padding: 10px 23px 10px 0;
       font-size: 13px;
 
       &:hover {
