--- a/avBooth/draft-selected-option-directive/draft-selected-option-directive.less
+++ b/avBooth/draft-selected-option-directive/draft-selected-option-directive.less
@@ -99,9 +99,20 @@ avb-draft-selected-option {
     right: 10%;
   }
 
+  span.label {
+    position: absolute;
+    top: 9px;
+    right: 11%;
+  }
+
   &:hover {
     color: white;
     background-color: @brand-danger;
+
+
+    span.label {
+      display: none;
+    }
 
     .show-remove {
       color: white;
