finishing migration from element directives to attr directives

--- a/avBooth/draft-option-directive/draft-option-directive.less
+++ b/avBooth/draft-option-directive/draft-option-directive.less
@@ -1,4 +1,4 @@
-avb-draft-option {
+[avb-draft-option] {
   cursor: pointer;
   position: relative;
   display: block;
@@ -159,6 +159,6 @@ avb-draft-option {
   }
 }
 
-.filter-mode avb-draft-option span.label {
+.filter-mode [avb-draft-option] span.label {
   display: block;
 }
