--- a/avBooth/draft-options-directive/draft-options-directive.less
+++ b/avBooth/draft-options-directive/draft-options-directive.less
@@ -1,4 +1,4 @@
-avb-draft-options {
+[avb-draft-options] {
   > .col-xs-12 {
     padding: 0;
     margin-bottom: 15px;
@@ -30,7 +30,7 @@ avb-draft-options {
     max-height:40px;
   }
 
-  accordion {
+  [accordion] {
     .panel {
       border: 0 none;
       border-radius: 0 !important;
