--- a/avBooth/accordion-options-directive/accordion-options-directive.less
+++ b/avBooth/accordion-options-directive/accordion-options-directive.less
@@ -1,4 +1,4 @@
-avb-accordion-options accordion {
+[avb-accordion-options] [accordion] {
   .panel {
     border: 0 none;
     border-radius: 0 !important;
