show category in selected accordion-options and show num of selected options in accordion group-headers

--- a/avBooth/accordion-options-directive/accordion-options-directive.less
+++ b/avBooth/accordion-options-directive/accordion-options-directive.less
@@ -24,6 +24,10 @@
       }
     }
 
+    .accordion-num-label {
+      margin-right: 5px;
+    }
+
     &.in {
       border-left: 1px solid @brand-success;
 
