changing colors in the design

--- a/app.less
+++ b/app.less
@@ -6,7 +6,11 @@
 @fa-font-path: "bower_components/font-awesome/fonts";
 
 /* Global Config */
-@av-primary: #009CDF;
+@av-primary: #612d62;
+@brand-primary: #612D62;
+@brand-success: #005c56;
+@brand-danger: #97c2b8;
+
 /* End Global Config */
 
 /* Component LESS */
