--- a/avBooth/accordion-selected-option-directive/accordion-selected-option-directive.less
+++ b/avBooth/accordion-selected-option-directive/accordion-selected-option-directive.less
@@ -36,9 +36,8 @@
   }
 
   .show-value {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    font-weight: normal;
+    font-size: 12pt;
   }
 
   .show-remove {
