--- a/avBooth/draft-selected-option-directive/draft-selected-option-directive.less
+++ b/avBooth/draft-selected-option-directive/draft-selected-option-directive.less
@@ -43,20 +43,20 @@
     width: 10%;
     height: 79px;
     border: 0 none;
-    background-color: lighten(@brand-success, 40%);
+    background-color: @brand-success;
     margin: 0;
+      color: white;
     border-radius: 0;
     transition: all .4s ease;
 
     &:hover, &.in {
-      color: white;
-      background-color: @brand-success;
+      background-color: darken(@brand-success, 10%);
     }
   }
 
   .btn-link {
     padding-top: 30px;
-    color: black;
+    color: white;
   }
 
   .documents-list {
