working on the drafts, now we have affixed table headers and some css worked out

--- a/avBooth/draft-option-directive/draft-option-directive.less
+++ b/avBooth/draft-option-directive/draft-option-directive.less
@@ -7,6 +7,11 @@
   clear: both;
   overflow: hidden;
 
+  > .col-xs-12, > .col-md-6 {
+    padding: 0;
+  }
+
+
   .opt-data, .opt-data-simple {
     display: block;
     float: left;
