--- a/avBooth/drafts-election-screen-directive/drafts-election-screen-directive.less
+++ b/avBooth/drafts-election-screen-directive/drafts-election-screen-directive.less
@@ -1,18 +1,44 @@
 [avb-drafts-election-screen] {
 
   .filter-input {
+    background-color: white;
+
     input {
       border: 0;
-      margin-top: 10px;
+      margin-top: 0;
       color: @gray-darker;
-      width: 100px;
+      width: 60px;
     }
+
+    .avb-toggle {
+      z-index: 15;
+    }
+
     span {
-      margin-left: -20px;
+      background-color: white;
       display: block;
       float: right;
-      margin-top: 13px;
-      margin-right: 10px;
+      margin-top: 3px;
+      margin-right: -10px;
+    }
+  }
+
+  .options-title {
+    background-color: white;
+    color: @brand-success;
+    padding: 10px !important;
+    font-size: 16px;
+  }
+
+  .affix-docs-header {
+    background-color: white;
+    color: @brand-success;
+    padding: 10px;
+    text-align: center;
+    font-size: 16px;
+
+    &.affix-top {
+      margin-left: 5px;
     }
   }
 
@@ -25,7 +51,9 @@
   }
 
   .small-selected {
-    margin-top: -15px;
+    margin-top: -33px;
+    padding: 0 8px;
+    color: white;
 
     h4 {
       display: inline-block;
@@ -38,11 +66,12 @@
       color: white;
 
       .pull-left {
-        h4, span.text-brand-success, .show-value {
+        h4, span, .show-value {
           color: white;
         }
 
         span.glyphicon-play {
+          color: white;
           transform: rotate(-90deg);
         }
       }
@@ -51,12 +80,13 @@
     .pull-left {
       cursor: pointer;
       display: block;
+      background-color: @brand-success;
 
       &:hover {
         background-color: #6AD46A;
         color: white;
 
-        h4, span.text-brand-success {
+        h4, span {
           color: white;
         }
       }
