adding some branding

--- a/avBooth/booth-directive/booth-directive.less
+++ b/avBooth/booth-directive/booth-directive.less
@@ -34,6 +34,14 @@
   .avb-top-navbar {
     margin-top: -3px;
 
+    a {
+      color: white;
+
+      &:hover {
+        color: white;
+      }
+    }
+
     .glyphicon {
       cursor: pointer;
     }
