adding some cell selection style and logic

--- a/avBooth/draft-option-cell-directive/draft-option-cell-directive.less
+++ b/avBooth/draft-option-cell-directive/draft-option-cell-directive.less
@@ -51,6 +51,15 @@
 
 [avb-draft-option].selected:hover [avb-draft-option-cell] {
   .has-data {
+    color: black;
+    background-color: #EEE;
+
+    &:hover {
+    background-color: #DDD;
+    }
+  }
+
+  .has-data.selected {
     color: white;
     background-color: #97C2B8;
 
