--- a/avBooth/draft-selected-option-directive/draft-selected-option-directive.less
+++ b/avBooth/draft-selected-option-directive/draft-selected-option-directive.less
@@ -141,3 +141,14 @@
     }
   }
 }
+
+
+@media (max-width: @screen-xs-max) {
+  [avb-drafts-election-screen] span.glyphicon {
+    margin-right: 0 !important;
+  }
+
+  [avb-draft-option] .show-value {
+    margin-top: 3px;
+  }
+}
