--- a/avBooth/draft-option-directive/draft-option-directive.less
+++ b/avBooth/draft-option-directive/draft-option-directive.less
@@ -23,6 +23,10 @@
     font-weight: bold;
   }
 
+  h4.docs-list {
+    font-size: 13px;
+  }
+
   .img-rounded {
     overflow: hidden;
     width: 60px;
@@ -71,20 +75,18 @@
 
     a {
       display: block;
-      width: 100%;
+      width: 33%;
       color: black;
       transition: all .4s ease;
-      padding: 10px 23px 10px 0;
+      padding: 6px;
+      text-align: center;
+      float: left;
       font-size: 13px;
 
       &:hover {
         color: white;
         text-decoration: none;
         background-color: @brand-success;
-      }
-
-      span.glyphicon {
-        margin-top: 15px;
       }
     }
   }
@@ -182,4 +184,16 @@
 
 .filter-mode [avb-draft-option] span.label {
   display: block;
+}
+
+
+
+[avb-draft-option] .documents-list [avb-draft-option-cell] {
+  width: 33%;
+  float: left;
+
+  .no-data, .has-data {
+    height: auto !important;
+    padding-top: 6px !important;
+  }
 }
