--- a/avBooth/success-screen-directive/success-screen-directive.less
+++ b/avBooth/success-screen-directive/success-screen-directive.less
@@ -1,4 +1,4 @@
-[avb-success-screen] .padded > p > strong {
+[avb-success-screen] .padded > p > strong.localizador {
   word-break: break-all;
   display: block;
 }
