add ie8 warning

--- a/app.less
+++ b/app.less
@@ -69,4 +69,24 @@
   color: @brand-primary;
 }
 
+#no-js {
+  color: @gray-dark;
+  text-align: center;
+  padding: 5%;
+}
+
+#unsupported-browser {
+  color: @gray-dark;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: white;
+  display: none;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  padding: 5%;
+}
+
 /* End Global LESS */
