--- a/avBooth/drafts-election-screen-directive/drafts-election-screen-directive.less
+++ b/avBooth/drafts-election-screen-directive/drafts-election-screen-directive.less
@@ -48,6 +48,7 @@
     > h4 {
       display: none;
     }
+    margin-bottom: 100px;
 
     [avb-draft-option].selected {
       background-color: @brand-success;
