--- a/app.less
+++ b/app.less
@@ -32,6 +32,7 @@
 @import "avBooth/drafts-election-screen-directive/drafts-election-screen-directive.less";
 @import "avBooth/review-screen-directive/review-screen-directive.less";
 @import "avBooth/review-ballot-directive/review-ballot-directive.less";
+@import "avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.less";
 @import "avBooth/multi-question-directive/multi-question-directive.less";
 @import "avBooth/selected-options-directive/selected-options-directive.less";
 @import "avBooth/start-screen-directive/start-screen-directive.less";
