--- a/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.less
+++ b/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.less
@@ -1,5 +1,7 @@
 [avb-pcandidates-election-screen] {
-
+  .filter-input-wrap {
+    min-height: 37px;
+  }
   .filter-input {
     background-color: @av-primary;
     border-radius: 0 0 20px 20px;
@@ -25,9 +27,10 @@
 
   .options-title {
     background-color: white;
-    color: @av-primary;
+    color: @brand-success;
     padding: 10px !important;
     font-size: 16px;
+    margin-top: -15px;
   }
 
   .affix-docs-header {
@@ -36,9 +39,14 @@
     padding: 10px;
     text-align: center;
     font-size: 16px;
+    margin-top: -15px;
 
     &.affix-top {
       margin-left: -2%;
+    }
+
+    &.col-xs-2 {
+      width: 19.4443%;
     }
   }
 
@@ -98,7 +106,8 @@
   }
 
   .small-selected {
-    margin-top: -33px;
+    margin-top: -15px;
+    padding-left: 0;
 
     h4 {
       display: inline-block;
@@ -109,6 +118,7 @@
     &.dropdown {
       background-color: @brand-success;
       color: white;
+      width: 100% !important;
 
       .pull-left {
         background-color: @brand-success;
@@ -166,5 +176,25 @@
   .animate-repeat.ng-enter.ng-enter-active {
     opacity:1;
     max-height:40px;
+  }
+}
+
+
+@media(max-width: 768px) {
+  [avb-pcandidates-election-screen] {
+    .filter-input {
+      border-radius: 0;
+    }
+
+    .navbar-unfixed-top h1 {
+      font-size: 28px;
+    }
+
+    .hidder {
+      background-color: @av-primary;
+      width: 100%;
+      height: 35px;
+      margin-top: -15px;
+    }
   }
 }
