starting work on pcandidates-rows

--- a/app.less
+++ b/app.less
@@ -33,6 +33,8 @@
 @import "avBooth/review-screen-directive/review-screen-directive.less";
 @import "avBooth/review-ballot-directive/review-ballot-directive.less";
 @import "avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.less";
+@import "avBooth/pcandidates-rows-directive/pcandidates-rows-directive.less";
+@import "avBooth/pcandidates-row-directive/pcandidates-row-directive.less";
 @import "avBooth/multi-question-directive/multi-question-directive.less";
 @import "avBooth/selected-options-directive/selected-options-directive.less";
 @import "avBooth/start-screen-directive/start-screen-directive.less";
