--- a/avBooth/pcandidates-row-directive/pcandidates-row-directive.less
+++ b/avBooth/pcandidates-row-directive/pcandidates-row-directive.less
@@ -1,15 +1,50 @@
 [avb-pcandidates-row] {
-  .col-md-2 {
+  cursor: pointer;
+  position: relative;
+  display: block;
+  width: 100%;
+  clear: both;
+  overflow: hidden;
+  transition:all linear 0.5s;
+
+  .col-sm-2 {
     width: 19.4443%;
   }
 
-  > .col-md-5, > .col-md-2 {
+  > .col-sm-5, > .col-sm-2 {
     height: 60px;
+    padding: 0;
   }
 
   .team-title {
-    font-size: 25px;
-    padding: 5px 0;
+    font-size: 20px;
+    line-height: 20px;
+    padding: 15px 15px;
     font-weight: bold;
+    float: left;
+    overflow: hidden;
+    width: 88%;
   }
+
+  &:hover {
+    background-color: @gray-lighter;
+  }
+
+  .btn-right {
+    display: block;
+    float: left;
+    width: 12%;
+    color: white;
+    height: 59px;
+    border: 0 none;
+    background-color: @brand-success;
+    margin: 0;
+    border-radius: 0;
+    transition: all .4s ease;
+
+    &:hover, &.in {
+      background-color: darken(@brand-success, 10%);
+    }
+  }
+
 }
