make pcandidates election screen unselectable

--- a/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.less
+++ b/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.less
@@ -1,4 +1,9 @@
 [avb-pcandidates-election-screen] {
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+
   .filter-input-wrap {
     min-height: 37px;
 
