--- a/app.less
+++ b/app.less
@@ -35,6 +35,7 @@
 @import "avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.less";
 @import "avBooth/pcandidates-rows-directive/pcandidates-rows-directive.less";
 @import "avBooth/pcandidates-row-directive/pcandidates-row-directive.less";
+@import "avBooth/pcandidates-cell-directive/pcandidates-cell-directive.less";
 @import "avBooth/multi-question-directive/multi-question-directive.less";
 @import "avBooth/selected-options-directive/selected-options-directive.less";
 @import "avBooth/start-screen-directive/start-screen-directive.less";
