--- a/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.less
+++ b/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.less
@@ -37,7 +37,7 @@
   .options-title {
     background-color: white;
     color: @brand-success;
-    padding: 10px !important;
+    padding: 10px 10px 0 10px !important;
     font-size: 16px;
     margin-top: -15px;
 
