add row selection to pcandidates screen

--- a/avBooth/pcandidates-cell-directive/pcandidates-cell-directive.less
+++ b/avBooth/pcandidates-cell-directive/pcandidates-cell-directive.less
@@ -26,9 +26,11 @@
       text-overflow: ellipsis;
       clear: both;
       display: block;
+      transition: all .4s ease;
     }
 
     .num-selected {
+      transition: all .4s ease;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
