--- a/avBooth/pcandidates-cell-directive/pcandidates-cell-directive.less
+++ b/avBooth/pcandidates-cell-directive/pcandidates-cell-directive.less
@@ -14,7 +14,7 @@
 
   .no-data, .has-data {
     width: 100%;
-    height: 80px;
+    min-height: 60px;
     padding-top: 12px;
     float: left;
     text-align: center;
@@ -38,7 +38,6 @@
       text-overflow: ellipsis;
       clear: both;
       display: block;
-      transition: all linear 0.5s;
     }
 
     .num-selected {
@@ -49,6 +48,45 @@
       line-height: 20px;
       color: black;
       display: block;
+    }
+
+    .candidates-list {
+      display: block;
+      width: 100%;
+      padding-top: 10px;
+
+      h4 {
+        color: black;
+        line-height: 30px;
+        margin-bottom: -5px;
+        font-size: 15px;
+      }
+
+      .candidate {
+        display: block;
+        text-align: left;
+        width: 100%;
+        line-height: 16px;
+        padding: 12px 0 12px 15px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        background-color: #DFF0D8;
+        color: #46884f;
+
+        &:hover {
+          background-color: #CCC;
+        }
+
+        &.selected {
+          background-color: @av-primary;
+          color: white;
+
+          &:hover {
+            background-color: #8FB8AF;
+          }
+        }
+      }
     }
 
     &:hover {
@@ -63,8 +101,21 @@
     color: black;
     background-color: #EEE;
 
+    .candidate {
+      color: black;
+      background-color: #EEE;
+    }
+
     &:hover {
-    background-color: #DDD;
+      background-color: #DDD;
+
+      .candidate {
+        background-color: #DDD;
+
+        &:hover {
+          background-color: #CCC;
+        }
+      }
     }
   }
 }
@@ -74,7 +125,7 @@
     background-color: @av-primary;
     color: white;
 
-    .num-selected {
+    .num-selected, h4 {
       color: white;
     }
 
@@ -91,8 +142,21 @@
     color: black;
     background-color: #EEE;
 
+    .candidate {
+      color: black;
+      background-color: #EEE;
+    }
+
     &:hover {
-    background-color: #DDD;
+      background-color: #DDD;
+
+      .candidate {
+        background-color: #DDD;
+
+        &:hover {
+          background-color: #CCC;
+        }
+      }
     }
   }
 
@@ -104,8 +168,26 @@
     color: white;
     background-color: #97C2B8;
 
+    h4 {
+      color: white;
+    }
+
+    .candidate.selected {
+      color: white;
+      background-color: #97C2B8;
+    }
+
     &:hover {
       background-color: #8BB3AA;
+
+      .candidate.selected {
+        color: white;
+        background-color: #8BB3AA;
+
+        &:hover {
+          background-color: #82A8A0;
+        }
+      }
     }
   }
 }
