--- a/avBooth/pcandidates-row-directive/pcandidates-row-directive.less
+++ b/avBooth/pcandidates-row-directive/pcandidates-row-directive.less
@@ -12,7 +12,7 @@
   }
 
   > .col-sm-5, > .col-sm-2 {
-    height: 60px;
+    min-height: 60px;
     padding: 0;
   }
 
@@ -42,6 +42,7 @@
     background-color: @brand-danger;
     top: 8px;
     right: 8px;
+    transition: none;
   }
 
   &:hover {
