--- a/avBooth/pcandidates-row-directive/pcandidates-row-directive.less
+++ b/avBooth/pcandidates-row-directive/pcandidates-row-directive.less
@@ -25,7 +25,7 @@
   .team-title {
     font-size: 20px;
     line-height: 20px;
-    padding: 15px 15px;
+    padding: 15px 15px 0 15px;
     font-weight: bold;
     float: left;
     overflow: hidden;
