marking important help, and showing number of selected in columns

--- a/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.less
+++ b/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.less
@@ -40,12 +40,16 @@
     padding: 10px 10px 0 10px !important;
     font-size: 16px;
     margin-top: -15px;
+  }
 
-    .title-help {
-      clear: both;
-      color: black;
-      font-size: 12px;
-    }
+  .title-help {
+    clear: both;
+    color: black;
+    font-size: 12px;
+  }
+
+  .title-help.important {
+    font-weight: bold;
   }
 
   .affix-docs-header {
