showing label in mobile with question

--- a/avBooth/pcandidates-cell-directive/pcandidates-cell-directive.less
+++ b/avBooth/pcandidates-cell-directive/pcandidates-cell-directive.less
@@ -7,6 +7,13 @@
     float: left;
   }
 
+  .label-category {
+    display: none;
+    position: absolute;
+    left: 10px;
+    top: 10px;
+  }
+
   .btn-right {
     display: none;
     margin-top: -12px;
@@ -201,6 +208,10 @@
     .btn-right {
       display: block;
       width: 10%;
+    }
+
+    .label-category {
+      display: block;
     }
   }
 }
