--- a/app.less
+++ b/app.less
@@ -22,6 +22,7 @@
 @import "avBooth/busy-directive/busy-directive.less";
 @import "avBooth/casting-ballot-screen-directive/casting-ballot-screen-directive.less";
 @import "avBooth/draft-options-directive/draft-options-directive.less";
+@import "avBooth/encrypting-ballot-screen-directive/encrypting-ballot-screen-directive.less";
 @import "avBooth/simple-option-directive/simple-option-directive.less";
 @import "avBooth/simple-selected-option-directive/simple-selected-option-directive.less";
 @import "avBooth/draft-option-directive/draft-option-directive.less";
