adding initial screen for cast or cancel

--- a/app.less
+++ b/app.less
@@ -21,6 +21,7 @@
 @import "avBooth/booth-directive/booth-directive.less";
 @import "avBooth/busy-directive/busy-directive.less";
 @import "avBooth/casting-ballot-screen-directive/casting-ballot-screen-directive.less";
+@import "avBooth/cast-or-cancel-screen-directive/cast-or-cancel-screen-directive.less";
 @import "avBooth/draft-options-directive/draft-options-directive.less";
 @import "avBooth/encrypting-ballot-screen-directive/encrypting-ballot-screen-directive.less";
 @import "avBooth/simple-option-directive/simple-option-directive.less";
