--- a/app.less
+++ b/app.less
@@ -18,6 +18,7 @@
 @import "avBooth/accordion-options-directive/accordion-options-directive.less";
 @import "avBooth/accordion-selected-option-directive/accordion-selected-option-directive.less";
 @import "avBooth/available-options-directive/available-options-directive.less";
+@import "avBooth/audit-ballot-screen-directive/audit-ballot-screen-directive.less";
 @import "avBooth/booth-directive/booth-directive.less";
 @import "avBooth/busy-directive/busy-directive.less";
 @import "avBooth/casting-ballot-screen-directive/casting-ballot-screen-directive.less";
