startin the creation of the results view

--- a/app.less
+++ b/app.less
@@ -42,6 +42,15 @@
 @import "avBooth/selected-options-directive/selected-options-directive.less";
 @import "avBooth/start-screen-directive/start-screen-directive.less";
 @import "avBooth/success-screen-directive/success-screen-directive.less";
+
+/* election */
+@import "avElection/results-controller/results-controller.less";
+@import "avElection/results-directive/results-directive.less";
+
+/* registration */
+@import "avRegistration/login-controller/login-controller.less";
+@import "avRegistration/login-directive/login-directive.less";
+
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
