--- a/app.less
+++ b/app.less
@@ -13,7 +13,10 @@
 
 /* End Global Config */
 
-/* Component LESS */
+/* avUi */
+@import "avUi/simple-error-directive/simple-error-directive.less";
+
+/* avBooth */
 @import "avBooth/accordion-option-directive/accordion-option-directive.less";
 @import "avBooth/accordion-options-directive/accordion-options-directive.less";
 @import "avBooth/accordion-selected-option-directive/accordion-selected-option-directive.less";
