improving the extensibility of the results directive

--- a/app.less
+++ b/app.less
@@ -49,6 +49,8 @@
 /* election */
 @import "avElection/results-controller/results-controller.less";
 @import "avElection/results-directive/results-directive.less";
+@import "avElection/question-results-directive/question-results-directive.less";
+@import "avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.less";
 
 /* registration */
 @import "avRegistration/login-controller/login-controller.less";
