--- a/app.less
+++ b/app.less
@@ -1,17 +1,4 @@
-@import "bower_components/bootstrap/less/bootstrap.less";
-//@import "bower_components/bootstrap/less/theme.less";
-@import "bower_components/font-awesome/less/font-awesome.less";
-@import "vendor/jquery.nanoscroller/nanoscroller.css";
-
-@fa-font-path: "bower_components/font-awesome/fonts";
-
-/* Global Config */
-@av-primary: #612d62;
-@brand-primary: #612D62;
-@brand-success: #005c56;
-@brand-danger: #97c2b8;
-
-/* End Global Config */
+@import "avb-start-loading.less";
 
 /* avUi */
 @import "avUi/simple-error-directive/simple-error-directive.less";
@@ -60,53 +47,3 @@
 
 /* Required for Angular UI Bootstrap */
 .nav, .pagination, .carousel a { cursor: pointer; }
-
-/* Global LESS */
-.btn-plain {
-  border-radius: 0;
-  border: 0;
-}
-
-.item-block {
-  display: block;
-  width: 100%;
-  border: 0;
-}
-
-.text-brand-success {
-  color: @brand-success;
-}
-
-.text-brand-warning {
-  color: @brand-warning;
-}
-
-.text-brand-danger {
-  color: @brand-danger;
-}
-
-.text-brand-primary {
-  color: @brand-primary;
-}
-
-#no-js {
-  color: @gray-dark;
-  text-align: center;
-  padding: 5%;
-}
-
-#unsupported-browser {
-  color: @gray-dark;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: white;
-  display: none;
-  text-align: center;
-  width: 100%;
-  height: 100%;
-  z-index: 10;
-  padding: 5%;
-}
-
-/* End Global LESS */
