--- a/avBooth/booth-directive/booth-directive.less
+++ b/avBooth/booth-directive/booth-directive.less
@@ -76,7 +76,7 @@
     width: 100%;
     height: 30px;
     content: " ";
-    background: linear-gradient(to bottom, rgba(97,45,98,0) 0%,rgba(97,45,98,1) 100%);
+    background: linear-gradient(to bottom, fade(@av-primary, 0%) 0%, @av-primary 100%);
   }
 
   #avb-toggle {
