--- a/avBooth/busy-directive/busy-directive.less
+++ b/avBooth/busy-directive/busy-directive.less
@@ -28,7 +28,7 @@
       width: 60px;
       height: 60px;
       border-radius: 7px;
-      background-image: url('/img/loading.gif');
+      background-image: url('@{imgdir}/loading.gif');
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-position: center center;
