--- a/avBooth/casting-ballot-screen-directive/casting-ballot-screen-directive.less
+++ b/avBooth/casting-ballot-screen-directive/casting-ballot-screen-directive.less
@@ -37,7 +37,7 @@
       width: 60px;
       height: 60px;
       border-radius: 7px;
-      background-image: url('/img/loading.gif');
+      background-image: url('@{imgdir}/loading.gif');
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-position: center center;
