--- a/avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.less
+++ b/avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.less
@@ -1,4 +1,24 @@
 [av-plurality-at-large-results] {
+  table.resume caption, table.results thead tr {
+    font-weight: bold;
+    background-color: @av-primary;
+    color: white;
+    padding: 5px;
+  }
+
+  .table-hover {
+  > tbody > tr:hover {
+    > td,
+    > th {
+      background-color: #FBF3FF;
+    }
+  }
+}
+
+  table.resume tbody td.title {
+    font-weight: bold;
+  }
+
   table.results tbody tr td {
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -7,5 +27,12 @@
 
   table.results tbody tr.winner td {
     font-weight: bold;
+  }
+
+  .background-percent {
+    height: 100%;
+    background-color: @gray-lighter;
+    display: block;
+    position: absolute;
   }
 }
