adding logo and links to the results page

--- a/external.less
+++ b/external.less
@@ -3,6 +3,6 @@
 @import "bower_components/font-awesome/less/font-awesome.less";
 @import "vendor/jquery.nanoscroller/nanoscroller.css";
 
-@fa-font-path: "bower_components/font-awesome/fonts";
+@fa-font-path: "../../fonts";
 
 
