--- a/themes/default/app.less
+++ b/themes/default/app.less
@@ -2,6 +2,7 @@
 
 /* Global Config */
 @av-primary: #612d62;
+@av-secondary: #78bbb1;
 @brand-primary: #612D62;
 @brand-success: #005c56;
 @brand-danger: #97c2b8;
