--- a/avElection/results-directive/results-directive.less
+++ b/avElection/results-directive/results-directive.less
@@ -1,2 +1,10 @@
 [av-results] {
+  .agoralogo {
+    float: right;
+    display: block;
+    margin: 20px;
+    background-image: url('@{imgdir}/agora_voting_logo_100.png');
+    height: 18px;
+    width: 100px;
+  }
 }
