minor style changes on results

--- a/avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.less
+++ b/avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.less
@@ -10,7 +10,8 @@
   > tbody > tr:hover {
     > td,
     > th {
-      background-color: #FBF3FF;
+      background-color: #78bbb1;
+      color: white;
     }
   }
 }
