minor theme improvements

--- a/themes/default/app.less
+++ b/themes/default/app.less
@@ -3,6 +3,8 @@
 /* Global Config */
 @av-primary: #612d62;
 @av-secondary: #78bbb1;
+@av-primary-contrast: white;
+@av-secondary-contrast: white;
 @brand-primary: #612D62;
 @brand-success: #005c56;
 @brand-danger: #97c2b8;
@@ -38,6 +40,14 @@
 
 .text-brand-primary {
   color: @brand-primary;
+}
+
+.no-padding-left {
+  padding-left: 0;
+}
+
+.no-padding-right {
+  padding-right: 0;
 }
 
 #no-js {
