--- a/avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.less
+++ b/avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.less
@@ -2,19 +2,16 @@
   table.resume caption, table.results thead tr {
     font-weight: bold;
     background-color: @av-primary;
-    color: white;
+    color: @av-primary-contrast;
     padding: 5px;
   }
 
-  .table-hover {
-  > tbody > tr:hover {
-    > td,
-    > th {
-      background-color: #78bbb1;
-      color: white;
+  .table-hover > tbody > tr:hover {
+    > td, > th {
+      background-color: @av-secondary;
+      color: @av-secondary-contrast;
     }
   }
-}
 
   table.resume tbody td.title {
     font-weight: bold;
