--- a/themes/test/app.less
+++ b/themes/test/app.less
@@ -2,6 +2,9 @@
 
 /* Global Config */
 @av-primary: #ff0000;
+@av-secondary: #ff0000;
+@av-primary-contrast: #00fff;
+@av-secondary-contrast: #00fff;
 @brand-primary: #ff0000;
 @brand-success: #00ff00;
 @brand-danger: #000000;
@@ -37,6 +40,14 @@
 
 .text-brand-primary {
   color: @brand-primary;
+}
+
+.no-padding-left {
+  padding-left: 0;
+}
+
+.no-padding-right {
+  padding-right: 0;
 }
 
 #no-js {
