avAdmin: Election list with buttons and status

--- a/app.less
+++ b/app.less
@@ -38,6 +38,9 @@
 @import "avRegistration/login-controller/login-controller.less";
 @import "avRegistration/login-directive/login-directive.less";
 
+/* admin */
+@import "avAdmin/elections-directive/elections-directive.less";
+
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
