--- a/themes/default/app.less
+++ b/themes/default/app.less
@@ -9,6 +9,10 @@
 @brand-success: #005c56;
 @brand-danger: #97c2b8;
 
+/* Admin Config */
+@av-bg: #EEE;
+@av-bg-hover: #DDD;
+
 @imgdir: "../../img";
 
 @import "../../app.less";
