--- a/themes/test/app.less
+++ b/themes/test/app.less
@@ -8,6 +8,11 @@
 @brand-primary: #ff0000;
 @brand-success: #00ff00;
 @brand-danger: #000000;
+@brand-warning: #5C5B00;
+
+/* Admin Config */
+@av-bg: #EEE;
+@av-bg-hover: #DDD;
 
 @imgdir: "../../img";
 
