--- a/app.less
+++ b/app.less
@@ -40,6 +40,7 @@
 
 /* admin */
 @import "avAdmin/elections-directive/elections-directive.less";
+@import "avAdmin/questions-directive/questions-directive.less";
 
 /* Add Component LESS Above */
 
