avAdmin: election creation form interface

--- a/themes/default/app.less
+++ b/themes/default/app.less
@@ -12,6 +12,8 @@
 /* Admin Config */
 @av-bg: #EEE;
 @av-bg-hover: #DDD;
+@av-error-bg: #aa9999;
+@av-error-color: #882222;
 
 @imgdir: "../../img";
 
