--- a/avAdmin/questions-directive/questions-directive.less
+++ b/avAdmin/questions-directive/questions-directive.less
@@ -12,3 +12,10 @@
 .closebutton {
     cursor: pointer;
 }
+
+.error {
+    color: @av-error-color;
+    background-color: @av-error-bg;
+    padding: 5px;
+    margin: 5px;
+}
