--- a/avBooth/pcandidates-row-directive/pcandidates-row-directive.less
+++ b/avBooth/pcandidates-row-directive/pcandidates-row-directive.less
@@ -11,7 +11,7 @@
     transition: all linear 0.5s;
   }
 
-  > .col-sm-5, > .col-sm-2 {
+  > .team-title-wrapper, > .col-sm-2 {
     min-height: 60px;
     padding: 0;
   }
