adding iframe-resizer for widgets and adding ballot locator widget

--- a/avBooth/booth-directive/booth-directive.less
+++ b/avBooth/booth-directive/booth-directive.less
@@ -1,4 +1,4 @@
-[av-booth] {
+[av-booth], [av-ballot-locator-screen] {
   .avb-content > .container {
     padding: 0;
 
@@ -17,6 +17,9 @@
 
   .padded-left {
     padding-left: 15px !important;
+  }
+  .padded-top {
+    padding-top: 15px !important;
   }
 
   .padded-right {
